force-app/main/default/objects/Expense_Claim__c/fields/Auto__c.field-meta.xml
<CustomField>
    <fullName>Auto__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Auto</label>
    <type>Checkbox</type>
</CustomField>