force-app/main/default/objects/Expense_Claim__c/fields/Auto_Description_If_Necessary__c.field-meta.xml
<CustomField>
    <fullName>Auto_Description_If_Necessary__c</fullName>
    <label>Auto Description(If Necessary)</label>
    <type>TextArea</type>
</CustomField>