force-app/main/default/objects/Expense_Claim__c/fields/Auto_TO_FRO__c.field-meta.xml
<CustomField>
    <fullName>Auto_TO_FRO__c</fullName>
    <label>Auto TO/FRO</label>
    <length>250</length>
    <type>Text</type>
</CustomField>