force-app/main/default/objects/Expense_Claim__c/fields/Auto_Travel_Date__c.field-meta.xml
<CustomField>
    <fullName>Auto_Travel_Date__c</fullName>
    <label>Auto Travel Date</label>
    <type>Date</type>
</CustomField>