force-app/main/default/objects/Expense_Claim__c/fields/Auto_Travel_Distance__c.field-meta.xml
<CustomField>
    <fullName>Auto_Travel_Distance__c</fullName>
    <label>Auto Travel Distance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>