force-app/main/default/objects/Expense_Claim__c/fields/Bus__c.field-meta.xml
<CustomField>
    <fullName>Bus__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bus</label>
    <type>Checkbox</type>
</CustomField>