force-app/main/default/objects/Expense_Claim__c/fields/Bus_Amount__c.field-meta.xml
<CustomField>
    <fullName>Bus_Amount__c</fullName>
    <label>Bus Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>