force-app/main/default/objects/Expense_Claim__c/fields/Bus_TO_FRO__c.field-meta.xml
<CustomField>
    <fullName>Bus_TO_FRO__c</fullName>
    <label>Bus TO/FRO</label>
    <length>250</length>
    <type>Text</type>
</CustomField>