force-app/main/default/objects/Expense_Claim__c/fields/Bus_Travel_Date__c.field-meta.xml
<CustomField>
    <fullName>Bus_Travel_Date__c</fullName>
    <label>Bus Travel Date</label>
    <type>Date</type>
</CustomField>