force-app/main/default/objects/Expense_Claim__c/fields/Car_Destination_TO_FRO__c.field-meta.xml
<CustomField>
    <fullName>Car_Destination_TO_FRO__c</fullName>
    <label>Car Destination TO/FRO</label>
    <length>250</length>
    <type>Text</type>
</CustomField>