force-app/main/default/objects/Expense_Claim__c/fields/Car_Distance_Travelled__c.field-meta.xml
<CustomField>
    <fullName>Car_Distance_Travelled__c</fullName>
    <label>Car Distance Travelled</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>