force-app/main/default/objects/Expense_Claim__c/fields/Car_Expense__c.field-meta.xml
<CustomField>
    <fullName>Car_Expense__c</fullName>
    <formula>Car_Distance_Travelled__c  * 8</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Car Expense</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>