force-app/main/default/objects/Expense_Claim__c/fields/Car_Ride_Description_If_Necessary__c.field-meta.xml
<CustomField>
    <fullName>Car_Ride_Description_If_Necessary__c</fullName>
    <label>Car Ride Description (If Necessary)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>