force-app/main/default/objects/Expense_Claim__c/fields/Car_Travel_Date__c.field-meta.xml
<CustomField>
    <fullName>Car_Travel_Date__c</fullName>
    <label>Car Travel Date</label>
    <type>Date</type>
</CustomField>