force-app/main/default/objects/Expense_Claim__c/fields/D_A_Amount__c.field-meta.xml
<CustomField>
    <fullName>D_A_Amount__c</fullName>
    <label>D.A Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>