force-app/main/default/objects/Expense_Claim__c/fields/D_A_Bill_No__c.field-meta.xml
<CustomField>
    <fullName>D_A_Bill_No__c</fullName>
    <label>D.A Bill No.</label>
    <length>100</length>
    <type>Text</type>
</CustomField>