force-app/main/default/objects/Expense_Claim__c/fields/D_A_Date__c.field-meta.xml
<CustomField>
    <fullName>D_A_Date__c</fullName>
    <label>D.A Date</label>
    <type>Date</type>
</CustomField>