force-app/main/default/objects/Expense_Claim__c/fields/D_A_Description_If_Necessary__c.field-meta.xml
<CustomField>
    <fullName>D_A_Description_If_Necessary__c</fullName>
    <label>D.A Description (If Necessary)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>