force-app/main/default/objects/Expense_Claim__c/fields/D_A_Km_more_than_100__c.field-meta.xml
<CustomField>
    <fullName>D_A_Km_more_than_100__c</fullName>
    <defaultValue>false</defaultValue>
    <label>D.A (Km more than 100)</label>
    <type>Checkbox</type>
</CustomField>