force-app/main/default/objects/Expense_Claim__c/fields/Day_Planner_Name__c.field-meta.xml
<CustomField>
    <fullName>Day_Planner_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Day Planner Name</label>
    <referenceTo>Day_Planner__c</referenceTo>
    <relationshipLabel>Expense Claim</relationshipLabel>
    <relationshipName>Expense_Claim</relationshipName>
    <type>Lookup</type>
</CustomField>