force-app/main/default/objects/Expense_Claim__c/fields/Description_of_Claim__c.field-meta.xml
<CustomField>
    <fullName>Description_of_Claim__c</fullName>
    <label>Description of Claim</label>
    <type>TextArea</type>
</CustomField>