force-app/main/default/objects/Expense_Claim__c/fields/Expense_Claim_Line_Item_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Expense_Claim_Line_Item_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Expense Claim Line Item Lookup</label>
    <referenceTo>Expense_Claim_Line_Item__c</referenceTo>
    <relationshipLabel>Expense Claim</relationshipLabel>
    <relationshipName>Expense_Claim</relationshipName>
    <type>Lookup</type>
</CustomField>