force-app/main/default/objects/Expense_Claim__c/fields/Lodge__c.field-meta.xml
<CustomField>
    <fullName>Lodge__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Lodge</label>
    <type>Checkbox</type>
</CustomField>