force-app/main/default/objects/Expense_Claim__c/fields/Lodge_Bill_No__c.field-meta.xml
<CustomField>
    <fullName>Lodge_Bill_No__c</fullName>
    <label>Lodge Bill No.</label>
    <length>100</length>
    <type>Text</type>
</CustomField>