force-app/main/default/objects/Expense_Claim__c/fields/Lodging_Date__c.field-meta.xml
<CustomField>
    <fullName>Lodging_Date__c</fullName>
    <label>Lodging Date</label>
    <type>Date</type>
</CustomField>