force-app/main/default/objects/Expense_Claim__c/fields/Mill_Planner__c.field-meta.xml
<CustomField>
    <fullName>Mill_Planner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Mill Planner Name</label>
    <referenceTo>Mill_Planner__c</referenceTo>
    <relationshipLabel>Expense Claim</relationshipLabel>
    <relationshipName>Expense_Claim</relationshipName>
    <type>Lookup</type>
</CustomField>