force-app/main/default/objects/Expense_Claim__c/fields/Miscellaneous_Bill_No__c.field-meta.xml
<CustomField>
    <fullName>Miscellaneous_Bill_No__c</fullName>
    <label>Miscellaneous Bill No.</label>
    <length>250</length>
    <type>Text</type>
</CustomField>