force-app/main/default/objects/Expense_Claim__c/fields/Office_Car__c.field-meta.xml
<CustomField>
    <fullName>Office_Car__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Office Car</label>
    <type>Checkbox</type>
</CustomField>