force-app/main/default/objects/Expense_Claim__c/fields/Office_Car_Expense__c.field-meta.xml
<CustomField>
    <fullName>Office_Car_Expense__c</fullName>
    <label>Office Car Expense</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>