force-app/main/default/objects/Expense_Claim__c/fields/Office_Car_TO_FRO__c.field-meta.xml
<CustomField>
    <fullName>Office_Car_TO_FRO__c</fullName>
    <label>Office Car TO/FRO</label>
    <length>250</length>
    <type>Text</type>
</CustomField>