force-app/main/default/objects/Expense_Claim__c/fields/Office_Car_Travel_Date__c.field-meta.xml
<CustomField>
    <fullName>Office_Car_Travel_Date__c</fullName>
    <label>Office Car Travel Date</label>
    <type>Date</type>
</CustomField>