force-app/main/default/objects/Expense_Claim__c/fields/Personal_Car__c.field-meta.xml
<CustomField>
    <fullName>Personal_Car__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Personal Car</label>
    <type>Checkbox</type>
</CustomField>