force-app/main/default/objects/Expense_Claim__c/fields/Ride_Description_If_Necessary__c.field-meta.xml
<CustomField>
    <fullName>Ride_Description_If_Necessary__c</fullName>
    <label>Ride Description (If Necessary)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>