force-app/main/default/objects/Expense_Claim__c/fields/Sample__c.field-meta.xml
<CustomField>
    <fullName>Sample__c</fullName>
    <label>Sample</label>
    <length>20</length>
    <type>Text</type>
</CustomField>