force-app/main/default/objects/Expense_Claim__c/fields/Share_Auto__c.field-meta.xml
<CustomField>
    <fullName>Share_Auto__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Share Auto</label>
    <type>Checkbox</type>
</CustomField>