force-app/main/default/objects/Expense_Claim__c/fields/Share_Auto_Amount__c.field-meta.xml
<CustomField>
    <fullName>Share_Auto_Amount__c</fullName>
    <label>Share Auto Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>