force-app/main/default/objects/Expense_Claim__c/fields/Share_Auto_Description_If_Necessary__c.field-meta.xml
<CustomField>
    <fullName>Share_Auto_Description_If_Necessary__c</fullName>
    <label>Share Auto Description (If Necessary)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>