force-app/main/default/objects/Expense_Claim__c/fields/Share_Auto_Travel_Date__c.field-meta.xml
<CustomField>
    <fullName>Share_Auto_Travel_Date__c</fullName>
    <label>Share Auto Travel Date</label>
    <type>Date</type>
</CustomField>