force-app/main/default/objects/Expense_Claim__c/fields/Total_Expenses__c.field-meta.xml
<CustomField>
    <fullName>Total_Expenses__c</fullName>
    <formula>Bus_Amount__c  +  D_A_Amount__c  +  Lodge_Amount__c  +  Miscellaneous_Amount__c  +  Share_Auto_Amount__c  +  Train_Amount__c  +  Auto_Amount__c  +  Two_Wheeler_Expense__c  +  Car_Expense__c +  Office_Car_Expense__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Expenses</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>