force-app/main/default/objects/Expense_Claim__c/fields/Train_Journey_Description_If_Necessary__c.field-meta.xml
<CustomField>
    <fullName>Train_Journey_Description_If_Necessary__c</fullName>
    <label>Train Journey Description (If Necessary)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>