force-app/main/default/objects/Expense_Claim__c/fields/Train_Journey_TO_FRO__c.field-meta.xml
<CustomField>
    <fullName>Train_Journey_TO_FRO__c</fullName>
    <label>Train Journey TO/FRO</label>
    <length>250</length>
    <type>Text</type>
</CustomField>