force-app/main/default/objects/Expense_Claim__c/fields/Travel_Bill_Number__c.field-meta.xml
<CustomField>
    <fullName>Travel_Bill_Number__c</fullName>
    <label>Travel Bill Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>