force-app/main/default/objects/Expense_Claim__c/fields/Travelling_Charges__c.field-meta.xml
<CustomField>
    <fullName>Travelling_Charges__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Travelling Charges</label>
    <type>Checkbox</type>
</CustomField>