force-app/main/default/objects/Expense_Claim__c/fields/Two_Wheeler__c.field-meta.xml
<CustomField>
    <fullName>Two_Wheeler__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Two Wheeler</label>
    <type>Checkbox</type>
</CustomField>