force-app/main/default/objects/Expense_Claim__c/fields/Two_Wheeler_Bill_No__c.field-meta.xml
<CustomField>
    <fullName>Two_Wheeler_Bill_No__c</fullName>
    <label>Two Wheeler Bill No</label>
    <length>250</length>
    <type>Text</type>
</CustomField>