force-app/main/default/objects/Expense_Claim__c/fields/Two_Wheeler_Expense__c.field-meta.xml
<CustomField>
    <fullName>Two_Wheeler_Expense__c</fullName>
    <formula>Two_Wheeler_Travel_Distance__c  * 3.5</formula>
    <label>Two Wheeler Expense</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>