force-app/main/default/objects/Expense_Claim__c/fields/Two_Wheeler_Travel_Date__c.field-meta.xml
<CustomField>
    <fullName>Two_Wheeler_Travel_Date__c</fullName>
    <label>Two Wheeler Travel Date</label>
    <type>Date</type>
</CustomField>