force-app/main/default/objects/Expense_Claim__c/fields/Two_Wheeler_Travel_Distance__c.field-meta.xml
<CustomField>
    <fullName>Two_Wheeler_Travel_Distance__c</fullName>
    <label>Two Wheeler Travel Distance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>