force-app/main/default/objects/Expense_Claim__c/recordTypes/Fuel.recordType-meta.xml
<RecordType>
    <fullName>Fuel</fullName>
    <active>true</active>
    <label>Fuel</label>
</RecordType>